Adding table styles

--- a/assets/app/view/components/loading-page/loading-page.scss
+++ b/assets/app/view/components/loading-page/loading-page.scss
@@ -5,3 +5,9 @@
 
   &::-webkit-scrollbar { display: none; }
 }
+
+.page--loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
