--- a/assets/app/view/components/modal/modal.scss
+++ b/assets/app/view/components/modal/modal.scss
@@ -35,3 +35,20 @@
 
   &:hover { color: #FFFFFF; }
 }
+
+.modal-header {
+  padding: 15px;
+  border-bottom: 1px solid #313D4F;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+}
+
+.modal-content { padding: 15px; }
+
+.modal-footer {
+  padding: 15px;
+  display: flex;
+  justify-content: flex-end;
+  border-top: 1px solid #313D4F;
+}
