Adding update status modal

--- a/assets/styles/value.scss
+++ b/assets/styles/value.scss
@@ -3,3 +3,9 @@
   text-transform: none;
   position: relative;
 }
+
+.value--radio {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
