Hooking up update customer status

--- a/assets/styles/label.scss
+++ b/assets/styles/label.scss
@@ -8,3 +8,10 @@
 .label--secondary {
   color: #7F8FA4;
 }
+
+.label--topbar {
+  color: #7F8FA4;
+  text-transform: none;
+  margin-bottom: 0;
+  margin-top: 5px;
+}
