--- a/assets/app/view/components/section/section.scss
+++ b/assets/app/view/components/section/section.scss
@@ -13,7 +13,9 @@
   display: block;
   margin: 0 auto;
   width: 100%;
-  max-width: 450px;
+  max-width: 900px;
+
+  .section--view & { max-width: 450px; }
 }
 
 .section-content {
