Adding comments and adding update note functionality

--- a/assets/styles/value.scss
+++ b/assets/styles/value.scss
@@ -9,3 +9,9 @@
   align-items: center;
   justify-content: center;
 }
+
+.value--note {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
